--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "node-sass --watch --output-style compressed styles/main.scss > styles/ns-awesome-gallery.min.css"
+    "watch": "node-sass --watch styles/main.scss --output styles/"
   },
   "repository": {
     "type": "git",
